# pseudod-v3-pdc

./: .gitignore  CMakeLists.txt  DIST_BOOTSTRAP  PseudoD.cmake  README.md  pdc.cmake  proyecto.json
bepd/: algoritmos.pd  builtinsImpl.pd
bepd/datos/: caja.pd  conjunto.pd  diccionario.pd  resultado.pd
bepd/datos/diccionario/: alist.pd  hashmap.pd  interfaz.pd
bepd/utilidades/: arreglo.pd  iteración.pd  texto.pd
bepd/utilidades/texto/: ascii.pd  utf16.pd  utf8.pd
bepd/x/: adhoc.pd  algebraico.pd  cli.pd  control.pd  datos.pd  datos2.pd  entorno.pd  enum.pd  json.pd  logs.pd  puerto.pd  sexpr.pd  subproceso.pd  utf8.pd
bepd/x/puerto/: deArchivo.pd
bepd/x/sistemaDeArchivos/: archivo.pd  rutas.pd
build-stage0/: CMakeLists.txt  bootstrap.lua  sexpr.c
cmake/: PseudoD2.cmake  local-toolchain.txt.in  pdcrt-config.cmake.in  toolchain.txt.in
cmake/inner_pdc/: CMakeLists.txt
docs/: arquitectura.md  bepd-pddoc.lua  cli.md  cmake.md  modelo-de-compilación.md  módulos.md  pdc-pddoc.lua
libs/systemtap/: LICENSE
libs/systemtap/sys/: sdt-config.h  sdt.h
pdc/: abstraer.pd  ast.pd  cabeceras.pd  capturas.pd  catamorfismos.pd  combinadores.pd  compilador.pd  cst.pd  dependencias.pd  info.pd  inicio.pd  módulos.pd  nombres.pd  parser.pd  subproceso.pd  tabla.pd  tokenizador.pd  tokens.pd  validación.pd
pdc/backend/: c.pd
pdc/backend/c/: ir.pd  lowerer.pd  revc.pd
pdc/bindings/: sqlite.pd
runtime/c/: pdcrt.c  pdcrt.h  runtime.pd
runtime/c/pdcrt/: pdcrt.c  pdcrt.h  pdcrt_base.c  pdcrt_base.h  pdcrt_dtrace.c  pdcrt_dtrace.h  pdcrt_gc.c  pdcrt_hash.c  pdcrt_hash.h  pdcrt_impls.c  pdcrt_ops.c  pdcrt_ops.h  pdcrt_tabla.c  pdcrt_vio.c  pdcrt_vio.h  pdffi.c  pdffi.h
runtime/c/pdcrt/pdcrt_impls/: archivo.c  archivo.h
runtime/c/pdcrt/pdcrt_vios/: vio_linux.c  vio_linux.h
runtime/c/pdcrt/vios/: vio_linux.c
runtime/c/probes/: clock_gettime_monotonic.c  pdcrt-plataforma.h.in  ptr32.c  ptr64.c  timespec_get_monotonic.c
scripts/: check-dependencies.sh  cloc.sh  codesize.sh  make-inner.sh
scripts/gdb/: gdb_check_frames.py  pdcrt_tools.py
scripts/gendoc/: gen.lua
scripts/profiling/: gc_log_parse.py  memoria.gp  memoria_programa.gp  tiempos.gp  tiempos2.gp  tiempos3.gp
tests/bench/: iter.pd
tests/código/: algebraico.pd  bin.pd  json.pd  tabla.pd  utf8.pd  utilidades-texto.pd
tests/lenguaje/: argv.pd  aritmética.pd  arreglo-como-texto.pd  arreglo-igualdad.pd  bits.pd  builtins.pd  buscar.pd  caps.pd  caps2.pd  caps3.pd  clases.pd  clases2.pd  clonar.pd  como-numero.pd  devolver-fuera.pd  en.pd  entero-como-texto.pd  enviar-mensaje.pd  escoger.pd  escojer.pd  escribir.pd  exportaciones.pd  float-como-texto.pd  formatear.pd  func.pd  funciones-1.pd  funciones-2.pd  hola-mundo.pd  igualdad-numerica.pd  igualdad.pd  impl.pd  instancias.pd  llamarSegún.pd  lógica.pd  mensajes.pd  metodo-no-encontrado.pd  metodo-no-encontrado2.pd  metodo-no-encontrado3.pd  mientras.pd  mini-iter.pd  (+27 more)
tests/lenguaje/coro/: comoTexto.pd  coro1.pd  coro2.pd  coro3.pd  coro4.pd  coro5.pd  igualA.pd
tests/lenguaje/ffi/: ffi.pd
tests/lenguaje/gc/: mucho.pd
tests/lenguaje/io/: archivo.pd
tests/lenguaje/utilizar/: exportar.pd  prueba.pd  prueba2.pd  prueba3.pd  prueba4.pd  prueba5.pd  prueba6.pd  transitivo.pd
